--- a/hungergames/config/database.yml
+++ b/hungergames/config/database.yml
@@ -19,7 +19,7 @@ development:
   encoding: unicode
   database: hungergames_development
   pool: 5
-  username: hungergames
+  username: macadocious
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -48,13 +48,5 @@ test:
   encoding: unicode
   database: hungergames_test
   pool: 5
-  username: hungergames
-  password:
-
-production:
-  adapter: postgresql
-  encoding: unicode
-  database: hungergames_production
-  pool: 5
-  username: hungergames
+  username: macadocious
   password:
