--- a/hungergames/Gemfile
+++ b/hungergames/Gemfile
@@ -48,3 +48,9 @@ group :test, :development do
 end
 #pry-rails gem
 gem 'pry-rails'
+
+#shoulda
+	gem 'shoulda-matchers'
+
+#factory-girl
+gem 'factory_girl_rails'
